@@ -2,7 +2,9 @@
 
     * src/widgets/geda_menu_item.c: Replace gtk_widget_hide_all with
       gtk_widget_hide in geda_menu_item_hide_all. Replace switch case
-      with if/else.
+      with if/else. Utilize macro:
+
+          * geda_get_widget_window
 
 2020-04-24 Wiley E. Hill <wileyhill@gmail.com>
 
